force-app/main/default/objects/JK_Employee__c/JK_Employee__c.object-meta.xml
<CustomObject>
    <description>Contains basic info about the employee</description>
    <label>JK_Employee</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>JK_Employees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>