force-app/main/default/objects/JK_Employee__c/fields/Emp_commCity__c.field-meta.xml
<CustomField>
    <fullName>Emp_commCity__c</fullName>
    <label>Emp_commCity</label>
    <length>100</length>
    <type>Text</type>
</CustomField>