force-app/main/default/objects/JK_Employee__c/fields/Emp_commState__c.field-meta.xml
<CustomField>
    <fullName>Emp_commState__c</fullName>
    <label>Emp_commState</label>
    <length>100</length>
    <type>Text</type>
</CustomField>