force-app/main/default/objects/JK_Employee__c/fields/Emp_createdByAdmin__c.field-meta.xml
<CustomField>
    <fullName>Emp_createdByAdmin__c</fullName>
    <label>Emp_createdByAdmin</label>
    <length>100</length>
    <type>Text</type>
</CustomField>