force-app/main/default/objects/JK_Employee__c/fields/Emp_currentStage__c.field-meta.xml
<CustomField>
    <fullName>Emp_currentStage__c</fullName>
    <label>Emp_currentStage</label>
    <length>30</length>
    <type>Text</type>
</CustomField>