force-app/main/default/objects/JK_Employee__c/fields/Emp_dateOfJoining__c.field-meta.xml
<CustomField>
    <fullName>Emp_dateOfJoining__c</fullName>
    <label>Emp_dateOfJoining</label>
    <length>20</length>
    <type>Text</type>
</CustomField>