force-app/main/default/objects/JK_Employee__c/fields/Emp_docsFinalisedDate__c.field-meta.xml
<CustomField>
    <fullName>Emp_docsFinalisedDate__c</fullName>
    <label>Emp_docsFinalisedDate</label>
    <length>20</length>
    <type>Text</type>
</CustomField>