force-app/main/default/objects/JK_Employee__c/fields/Emp_EmployeeNo__c.field-meta.xml
<CustomField>
    <fullName>Emp_EmployeeNo__c</fullName>
    <displayFormat>{000}</displayFormat>
    <label>Emp_EmployeeNo</label>
    <type>AutoNumber</type>
</CustomField>