force-app/main/default/objects/JK_Employee__c/fields/Emp_finalSubmission__c.field-meta.xml
<CustomField>
    <fullName>Emp_finalSubmission__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Emp_finalSubmission</label>
    <type>Checkbox</type>
</CustomField>