force-app/main/default/objects/JK_Employee__c/fields/Emp_firstName__c.field-meta.xml
<CustomField>
    <fullName>Emp_firstName__c</fullName>
    <label>Emp_firstName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>