force-app/main/default/objects/JK_Employee__c/fields/Emp_initialLogin__c.field-meta.xml
<CustomField>
    <fullName>Emp_initialLogin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Emp_initialLogin</label>
    <type>Checkbox</type>
</CustomField>