force-app/main/default/objects/JK_Employee__c/fields/Emp_isApprovedByAdmin__c.field-meta.xml
<CustomField>
    <fullName>Emp_isApprovedByAdmin__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is checked whenever the admin clicks on the approve button present in the document verification form.</description>
    <label>Emp_isApprovedByAdmin</label>
    <type>Checkbox</type>
</CustomField>