force-app/main/default/objects/JK_Employee__c/fields/Emp_isBloodGroupReportAvailable_Admin__c.field-meta.xml
<CustomField>
    <fullName>Emp_isBloodGroupReportAvailable_Admin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Emp_isBloodGroupReportAvailable_Admin</label>
    <type>Checkbox</type>
</CustomField>