force-app/main/default/objects/JK_Employee__c/fields/Emp_isCodeOfConductAvailable__c.field-meta.xml
<CustomField>
    <fullName>Emp_isCodeOfConductAvailable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Emp_isCodeOfConductAvailable</label>
    <type>Checkbox</type>
</CustomField>