force-app/main/default/objects/JK_Employee__c/fields/Emp_isEduCertificatesAvailable__c.field-meta.xml
<CustomField>
    <fullName>Emp_isEduCertificatesAvailable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Emp_isEduCertificatesAvailable</label>
    <type>Checkbox</type>
</CustomField>