force-app/main/default/objects/JK_Employee__c/fields/Emp_isEmployeeDocumentVerficationDone__c.field-meta.xml
<CustomField>
    <fullName>Emp_isEmployeeDocumentVerficationDone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Emp_isEmployeeDocumentVerficationDone</label>
    <type>Checkbox</type>
</CustomField>