force-app/main/default/objects/JK_Employee__c/fields/Emp_isExperienceLetterAvailable_Admin__c.field-meta.xml
<CustomField>
    <fullName>Emp_isExperienceLetterAvailable_Admin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Emp_isExperienceLetterAvailable_Admin</label>
    <type>Checkbox</type>
</CustomField>