force-app/main/default/objects/JK_Employee__c/fields/Emp_isPanCardAvailable__c.field-meta.xml
<CustomField>
    <fullName>Emp_isPanCardAvailable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Emp_isPanCardAvailable</label>
    <type>Checkbox</type>
</CustomField>