force-app/main/default/objects/JK_Employee__c/fields/Emp_isPFNominationAvailable__c.field-meta.xml
<CustomField>
    <fullName>Emp_isPFNominationAvailable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Emp_isPFNominationAvailable</label>
    <type>Checkbox</type>
</CustomField>