force-app/main/default/objects/JK_Employee__c/fields/Emp_isProofOfAddressAvailable__c.field-meta.xml
<CustomField>
    <fullName>Emp_isProofOfAddressAvailable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Emp_isProofOfAddressAvailable</label>
    <type>Checkbox</type>
</CustomField>