force-app/main/default/objects/JK_Employee__c/fields/Emp_isSignedOfferLetterAvailable__c.field-meta.xml
<CustomField>
    <fullName>Emp_isSignedOfferLetterAvailable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Emp_isSignedOfferLetterAvailable</label>
    <type>Checkbox</type>
</CustomField>