force-app/main/default/objects/JK_Employee__c/fields/Emp_lang1Write__c.field-meta.xml
<CustomField>
    <fullName>Emp_lang1Write__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Emp_lang1Write</label>
    <type>Checkbox</type>
</CustomField>