force-app/main/default/objects/JK_Employee__c/fields/Emp_lastModified__c.field-meta.xml
<CustomField>
    <fullName>Emp_lastModified__c</fullName>
    <label>Emp_lastModified</label>
    <length>100</length>
    <type>Text</type>
</CustomField>