force-app/main/default/objects/JK_Employee__c/fields/Emp_midName__c.field-meta.xml
<CustomField>
    <fullName>Emp_midName__c</fullName>
    <label>Emp_midName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>