force-app/main/default/objects/JK_Employee__c/fields/Emp_nationality__c.field-meta.xml
<CustomField>
    <fullName>Emp_nationality__c</fullName>
    <label>Emp_nationality</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>INDIAN</fullName>
            </value>
            <value>
                <fullName>AMERICIAN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>