force-app/main/default/objects/JK_Employee__c/fields/Emp_resState__c.field-meta.xml
<CustomField>
    <fullName>Emp_resState__c</fullName>
    <label>Emp_resState</label>
    <length>100</length>
    <type>Text</type>
</CustomField>