force-app/main/default/objects/JK_Employee__c/fields/Emp_submittedDate__c.field-meta.xml
<CustomField>
    <fullName>Emp_submittedDate__c</fullName>
    <label>Emp_submittedDate</label>
    <length>20</length>
    <type>Text</type>
</CustomField>