force-app/main/default/objects/JK_Employee__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Emp_userName__c</columns>
    <columns>Emp_password__c</columns>
    <columns>Emp_firstName__c</columns>
    <columns>Emp_lastName__c</columns>
    <columns>Emp_commCity__c</columns>
    <columns>Emp_createdDate__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>